--- a/Ava/langs/ar.yaml
+++ b/Ava/langs/ar.yaml
@@ -1,5 +1,5 @@
 language: "عربي"
-authors: "@JARVIS_V2"
+authors: "@OfficialDurgesh"
 
 curr_chat_lang: "مرحباً. لغتك الحالية هي {}، اختر واحدة من الأزرار أدناه:"
 set_chat_lang: "رائع، سيتم تغيير اللغة إلى {} من الآن فصاعداً!"
