--- a/Ava/langs/hi.yaml
+++ b/Ava/langs/hi.yaml
@@ -2,7 +2,7 @@
 language: "हिन्दी"
 
 # उन लोगों का नाम जिन्होंने इस अनुवाद पर काम किया
-authors: "@JARVIS_V2"
+authors: "@OfficialDurgesh"
 
 # भाषाएँ
 curr_chat_lang: "नमस्ते। आपकी वर्तमान भाषा {} है, कृपया नीचे दिए गए बटनों से वह चुनें जिसे आप चाहते हैं : "
