--- a/Ava/langs/tr.yaml
+++ b/Ava/langs/tr.yaml
@@ -2,7 +2,7 @@
 language: "Türkçe"
 
 # ɴᴀᴍᴇ ᴏғ ᴘᴇᴏᴘʟᴇ(s) ᴡʜᴏ ᴡᴏʀᴋᴇᴅ ᴏɴ ᴛʜɪs ᴛʀᴀɴsʟᴀᴛɪᴏɴ
-authors: "@JARVIS_V2"
+authors: "@OfficialDurgesh"
 
 # ʟᴀɴɢᴜᴀɢᴇs
 curr_chat_lang: "Merhaba. Mevcut diliniz {}, aşağıdaki düğmelerden istediğinizi seçin:"
